the top nav bar is now always at the top. Added a div that pushes down the component to prevent the nav bar from overlapping.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,9 @@
 #logo {
   position: absolute;
-    right: 0;
-    bottom: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.top-fill {
+  height: 60px;
 }
